--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 ultralytics>=8.3.0
+streamlit
+deepface
+opencv-python-headless
+tf-keras
+pandas
+pillow
 
-### Optional - ONNX format
-# onnx>=1.17.0
-
-### Optional - WIDERFace evaluation
-# Cython>=3.0.0
