--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,37 @@
-.idea
-venv
-weights
-runs
-*.pt
-*.onnx
-WIDER_train.zip
-WIDER_val.zip
-wider_face_split.zip
-data/widerface
-data/WIDER_train
-data/WIDER_val
-data/wider_face_split
-data/widerface.yaml
-widerface/results
-widerface/box_overlaps.c
-widerface/**/*.so
-widerface/**/*.o
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Streamlit
+.streamlit/secrets.toml
